--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,11 @@
 .outputs {
     color: blue;
 }
+
+input::-webkit-inner-spin-button,
+::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+    -moz-appearance: textfield;
+    appearance: none;
+}
